--- a/.github/workflows/run-hello.yml
+++ b/.github/workflows/run-hello.yml
@@ -23,8 +23,10 @@ jobs:
           playwright install
 
       - name: Run Playwright script
-        run: python hello.py "${{ github.event.inputs.message }}"
+        run: python playwright/ajaxCall.py
 
-
-        
-
+      - name: Upload screenshot
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-screenshot
+          path: screenshot_*.png
